pkg/ibmvpc/examples/out/explain_out/QueryConnectionSGSubsetPorts_all_vpcs_explain_detail.txt
Explaining connectivity from 147.235.219.206/32 to vsi2-ky within test-vpc1-ky using "protocol: TCP dst-ports: 10-30"
Interpreted source: 147.235.219.206/32 (external)
Interpreted destination: vsi2-ky[10.240.20.4]
=====================================================================================================================

Connections are allowed from Public Internet 147.235.219.206/32 to vsi2-ky[10.240.20.4] using "protocol: TCP dst-ports: 22"
(note that not all queried protocols/ports are allowed)

Path:
	Public Internet 147.235.219.206/32 -> 
	FloatingIP floating-ip-ky 52.118.184.123 -> 
	security group sg2-ky -> vsi2-ky[10.240.20.4]


Details:
~~~~~~~~
Path is enabled; The relevant rules are:
	Ingress:
		security group sg2-ky allows connection with the following allow rules
			index: 2, direction: inbound,  conns: protocol: tcp,  dstPorts: 22-22, remote: 147.235.219.206/32, local: 0.0.0.0/0

------------------------------------------------------------------------------------------------------------------------
